# parcial_calidad_del_software

./: .gitignore  calculator.h
.qt/5.15.2/mingw81_64/include/QtCore/: qconfig.h
.qt/5.15.2/mingw81_64/lib/cmake/Qt53DAnimation/: Qt53DAnimationConfig.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt53DCore/: Qt53DCoreConfig.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt53DExtras/: Qt53DExtrasConfig.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt53DInput/: Qt53DInputConfig.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt53DLogic/: Qt53DLogicConfig.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt53DQuick/: Qt53DQuickConfig.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt53DQuickAnimation/: Qt53DQuickAnimationConfig.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt53DQuickExtras/: Qt53DQuickExtrasConfig.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt53DQuickInput/: Qt53DQuickInputConfig.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt53DQuickRender/: Qt53DQuickRenderConfig.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt53DQuickScene2D/: Qt53DQuickScene2DConfig.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt53DRender/: Qt53DRenderConfig.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt5Bluetooth/: Qt5BluetoothConfig.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt5Core/: Qt5CoreConfig.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt5Designer/: Qt5DesignerConfig.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt5DesignerComponents/: Qt5DesignerComponentsConfig.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt5EglSupport/: Qt5EglSupportConfig.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt5Gamepad/: Qt5GamepadConfig.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt5Gui/: Qt5GuiConfig.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt5Location/: Qt5LocationConfig.cmake  Qt5Location_QGeoServiceProviderFactoryMapboxGL.cmake
.qt/5.15.2/mingw81_64/lib/cmake/Qt5Multimedia/: Qt5MultimediaConfig.cmake
.qt/5.15.2/mingw81_64/lib/pkgconfig/: Qt5Concurrent.pc  Qt5Core.pc  Qt5DBus.pc  Qt5Gui.pc  Qt5Network.pc  Qt5OpenGL.pc  Qt5OpenGLExtensions.pc  Qt5PrintSupport.pc  Qt5Sql.pc  Qt5Test.pc  Qt5Widgets.pc  Qt5Xml.pc
tests/: CMakeLists.txt  ENTREGA_PRUEBAS.md  calculator_test_access.h  run_tests_save_log.ps1  test_blackbox_comprehensive.cpp  test_gui_helpers.h  test_whitebox_comprehensive.cpp  whitebox_main.cpp
(+32 files in other folders)
